[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/romulus.tres" type="DynamicFont" id=1]
[ext_resource path="res://cutScene/CutScene1.gd" type="Script" id=2]
[ext_resource path="res://Art/Untitled.png" type="Texture" id=3]

[node name="CutScene1" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 161, 92 )
scale = Vector2( 0.15153, 0.15153 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 2769.53, 3470.23, 3192.66, 2092.92 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 162, 78 )
scale = Vector2( 0.254427, 0.255836 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 15.8092, 13.0349, 1913.35, 1071.75 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 82, 106 )
scale = Vector2( 0.117985, 0.117985 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 426.55, 1417.15, 1090.92, 392.51 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="Sprite2"]
modulate = Color( 0, 0.505882, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -546.0
margin_top = -194.0
margin_right = -534.0
margin_bottom = -174.0
custom_colors/font_color_disabled = Color( 0, 0.231373, 0.984314, 1 )
text = "Play"

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 227, 106 )
scale = Vector2( 0.117985, 0.117985 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 426.55, 1417.15, 1090.92, 392.51 )
__meta__ = {
"_edit_group_": true
}

[node name="QuitButton" type="Button" parent="Sprite3"]
modulate = Color( 0, 0.462745, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -546.0
margin_top = -196.0
margin_right = -543.0
margin_bottom = -190.0

[node name="Label2" type="Label" parent="."]
margin_left = 174.0
margin_top = 74.0
margin_right = 319.0
margin_bottom = 143.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 1 )
text = "Quit"

[node name="Label" type="Label" parent="."]
margin_left = 21.0
margin_top = 74.0
margin_right = 166.0
margin_bottom = 143.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 1 )
text = "Play"

[node name="Label3" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 42.0
margin_top = -5.0
margin_right = 552.0
margin_bottom = 136.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 1 )
text = "Dangerious Dag
And the oil rig"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 165, 86 )
current = true
zoom = Vector2( 0.3, 0.29 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 11, 60 )
polygon = PoolVector2Array( 123, 215, 124, 245, 156, 245, 150, 210, 127, 212, 126, 195, 162, 200, 167, 258, 109, 259, 104, 206 )

[connection signal="pressed" from="Sprite2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Sprite3/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="gui_input" from="Label" to="." method="_on_Label_gui_input"]
